--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gqlgen": "go run github.com/99designs/gqlgen generate",
     "run": "go run server.go",
     "docs_fmt": "./swag fmt",
+    "docs_gen": "./swag init -g main.go",
     "dev": "go run main.go"
   }
 }
