setup notification service methods

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["godotenv", "gofiber", "gorm", "varchar"]
+  "cSpell.words": ["godotenv", "gofiber", "gorm", "Termii", "Twilo", "varchar"]
 }
