--- a/sdk/package.json
+++ b/sdk/package.json
@@ -12,5 +12,8 @@
     "docs_gen": "./swag init -g main.go",
     "dev": "go run main.go"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "axios": "^1.6.8"
+  }
 }
