--- a/sdk/package.json
+++ b/sdk/package.json
@@ -8,6 +8,7 @@
   "scripts": {},
   "main": "index.ts",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "query-string": "^9.0.0"
   }
 }
