--- a/client/package.json
+++ b/client/package.json
@@ -15,55 +15,55 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@blocknote/core": "^0.12.4",
-    "@blocknote/react": "^0.12.4",
+    "@blocknote/core": "^0.13.0",
+    "@blocknote/mantine": "^0.13.2",
+    "@blocknote/react": "^0.13.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
-    "@tanstack/react-query": "^4.35.3",
-    "@tauri-apps/api": "^1.5.3",
+    "@tanstack/react-query": "^5.35.5",
+    "@tauri-apps/api": "^1.5.5",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^1.2.1",
-    "core_api": "file:.yalc/core_api",
     "framer-motion": "^10.17.9",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
-    "next-themes": "^0.2.1",
+    "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "query-string": "^9.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
-    "react-icons": "^5.0.0",
+    "react-icons": "^5.2.1",
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.3",
     "reactflow": "^11.7.3",
-    "recharts": "^2.12.4",
-    "tailwind-merge": "^1.13.2",
-    "tailwindcss-animate": "^1.0.6",
+    "recharts": "^2.12.7",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.22.4",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
-    "@tauri-apps/cli": "1.5.11",
-    "@types/node": "^17.0.45",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@tauri-apps/cli": "1.5.13",
+    "@types/node": "^20.12.11",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
