--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@blocknote/react": "^0.13.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.35.5",
