--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "react-toastify": "^9.1.3",
     "reactflow": "^11.7.3",
     "recharts": "^2.12.7",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
